# SQLab

./: .dockerignore  .gitattributes  Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  phase2-guide.md  pyproject.toml
server/: Dockerfile  __init__.py  app.py  db.py  environment.py  fault_injector.py  grader.py  gradio_ui.py  reward.py  start.sh  tasks.py
server/data/: demo-big-en-20170815.sql
server/results/: codestral-22b.json  deepseek-coder-v2-16b.json  devstral-small-2-latest.json  gemma4-31b.json  phi4-14b.json  qwen2.5-coder-14b.json  qwen2.5-coder-7b.json  qwen3-8b.json  qwen3-coder-30b.json
server/static/: episode-flow.excalidraw
tests/: test_model.py  test_reward_hacking.py
